build2.log
    Checking ritk-io v0.1.0 (D:\kwavers\ritk\crates\ritk-io)
    Checking ritk-registration v0.1.0 (D:\kwavers\ritk\crates\ritk-registration)
error[E0432]: unresolved import `dicom::pixeldata`
  --> crates\ritk-io\src\format\dicom\mod.rs:6:12
   |
 6 | use dicom::pixeldata::PixelDecoder;
   |            ^^^^^^^^^ could not find `pixeldata` in `dicom`
   |
note: found an item that was configured out
  --> C:\Users\RyanClanton\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\dicom-0.8.2\src\lib.rs:75:28
   |
74 | #[cfg(feature = "pixeldata")]
   |       --------------------- the item is gated behind the `pixeldata` feature
75 | pub use dicom_pixeldata as pixeldata;
   |                            ^^^^^^^^^

error[E0599]: no method named `decode_pixel_data` found for reference `&FileDicomObject<InMemDicomObject>` in the current scope
   --> crates\ritk-io\src\format\dicom\mod.rs:213:18
    |
212 |               let pixel_data = obj
    |  ______________________________-
213 | |                 .decode_pixel_data()
    | |_________________-^^^^^^^^^^^^^^^^^
    |
help: there is a method `raw_pixel_data` with a similar name
    |
213 -                 .decode_pixel_data()
213 +                 .raw_pixel_data()
    |

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `ritk-io` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
